COMMIT 07-05-2025 Communication security changes