@@ -8,39 +8,75 @@ import java.security.KeyPair;
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.cert.X509Certificate;
+import java.util.Scanner;
 
 public class CommunicationSecurityExample {
 
-    private static final CommunicationSecurity security = new CommunicationSecurity();
+    private static final CommunicationSecurity security;
 
-    public static void main(String[] args) throws Exception {
-        // Step 0: Register BouncyCastle provider
-        security.init();
-
-        simulateMerchant();
-        simulateBank();
-        simulateMerchantTransaction();
-        simulateBankTransaction();
+    static {
+        try {
+            security = new CommunicationSecurity();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    public static void simulateMerchant() throws Exception {
+    private static final String PASSWORD = "changeit"; // secure this in real apps
+
+    public static void main(String[] args) throws Exception {
+        security.init();
+        Scanner scanner = new Scanner(System.in);
+        int choice;
+
+        System.out.println("🔐 Secure Communication Simulator");
+
+        do {
+            System.out.println("\nSelect an operation:");
+            System.out.println("1 - Setup Merchant (Key + CSR)");
+            System.out.println("2 - Setup Bank (Root Certificate Authority + Signed Merchant Certificate)");
+            System.out.println("3 - Simulate Merchant Transaction");
+            System.out.println("4 - Simulate Bank Processing");
+            System.out.println("0 - Exit");
+            System.out.print("Enter your choice: ");
+
+            choice = scanner.nextInt();
+            scanner.nextLine(); // clear newline
+
+            switch (choice) {
+                case 1 -> merchantSetup();
+                case 2 -> bankSetup();
+                case 3 -> simulateMerchantTransaction();
+                case 4 -> simulateBankTransaction();
+                case 0 -> System.out.println("Exiting...");
+                default -> System.out.println("❌ Invalid choice. Try again.");
+            }
+
+        } while (choice != 0);
+    }
+
+    public static void merchantSetup() throws Exception {
         System.out.println("\n🚀 MERCHANT SETUP STARTED");
         KeyPair merchantKeyPair = security.generateKeyPair();
         String merchantDn = "CN=merchant1.com, O=Merchant Ltd, OU=Payments, L=Mumbai, ST=MH, C=IN, EMAILADDRESS=info@merchant.com";
         String merchantCsrPem = security.generateCSR(merchantKeyPair, merchantDn);
+
         Files.writeString(Path.of("merchant1-csr.pem"), merchantCsrPem);
-        Files.writeString(Path.of("merchant1-private.pem"), security.toPEM(merchantKeyPair.getPrivate()));
+        Files.writeString(Path.of("merchant1-private-not-encrypted.pem"), security.toPEM(merchantKeyPair.getPrivate()));
+        Files.writeString(Path.of("merchant1-private.pem"), security.encryptPrivateKey(merchantKeyPair.getPrivate(), PASSWORD));
+        System.out.println("✅ Merchant CSR and private key saved.");
     }
 
-    public static void simulateBank() throws Exception {
+    public static void bankSetup() throws Exception {
         System.out.println("\n🏦 BANK SETUP STARTED");
         KeyPair bankRootKeyPair = security.generateKeyPair();
         X509Certificate bankRootCert = security.generateCertificate(
                 bankRootKeyPair, "bank.com", "Bank Ltd", "CA Dept", "New York",
-                "NY", "US", "root@bank.com", 3650);
+                "NY", "US", "root@bank.com", 10);
 
         Files.writeString(Path.of("bank-root-cert.pem"), security.toPEM(bankRootCert));
-        Files.writeString(Path.of("bank-root-private.pem"), security.toPEM(bankRootKeyPair.getPrivate()));
+        Files.writeString(Path.of("bank-root-private-not-encrypted.pem"), security.toPEM(bankRootKeyPair.getPrivate()));
+        Files.writeString(Path.of("bank-root-private.pem"), security.encryptPrivateKey(bankRootKeyPair.getPrivate(), PASSWORD));
 
         String merchantCsrPem = Files.readString(Path.of("merchant1-csr.pem"));
         PKCS10CertificationRequest merchantCsr = security.parseCSR(merchantCsrPem);
@@ -48,24 +84,24 @@ public class CommunicationSecurityExample {
         PublicKey merchantPublicKey = security.extractPublicKeyFromCSR(merchantCsr);
 
         X509Certificate signedMerchantCert = security.signCSR(
-                bankRootKeyPair, bankRootCert, merchantPublicKey, merchantSubjectDn, 365);
-
-        Files.writeString(Path.of("signed-merchant1-cert.pem"), security.toPEM(signedMerchantCert));
+                bankRootKeyPair, bankRootCert, merchantPublicKey, merchantSubjectDn, 1);
+        Files.writeString(Path.of("bank-signed-merchant1-cert.pem"), security.toPEM(signedMerchantCert));
+        System.out.println("✅ Signed merchant certificate generated and stored.");
     }
 
     public static void simulateMerchantTransaction() throws Exception {
         System.out.println("\n📤 MERCHANT TRANSACTION INITIATED");
         String message = "{ orderId :1234, amount :100.0}";
-        byte[] plaintext = message.getBytes();
 
-        PrivateKey merchantPrivateKey = security.loadPrivateKeyFromPEM("merchant1-private.pem");
+        String encryptedPrivateKeyPEM = Files.readString(Path.of("merchant1-private.pem"));
+        PrivateKey merchantPrivateKey = security.loadPrivateKeyFromEncryptedPEM(encryptedPrivateKeyPEM, PASSWORD);
         X509Certificate bankCert = security.parseCertificateFromPEM(Files.readString(Path.of("bank-root-cert.pem")));
 
-        byte[] signature = security.sign(plaintext, merchantPrivateKey);
-        byte[] encrypted = security.encrypt(plaintext, bankCert.getPublicKey());
+        String signature = security.sign(message, merchantPrivateKey);
+        String encrypted = security.encrypt(message, bankCert.getPublicKey());
 
-        Files.write(Path.of("message.encrypted"), encrypted);
-        Files.write(Path.of("message.signature"), signature);
+        Files.write(Path.of("message.encrypted"), encrypted.getBytes());
+        Files.write(Path.of("message.signature"), signature.getBytes());
 
         System.out.println("✅ Message encrypted and signed by merchant.");
     }
@@ -73,18 +109,18 @@ public class CommunicationSecurityExample {
     public static void simulateBankTransaction() throws Exception {
         System.out.println("\n📥 BANK PROCESSING MESSAGE");
 
-        byte[] encrypted = Files.readAllBytes(Path.of("message.encrypted"));
-        byte[] signature = Files.readAllBytes(Path.of("message.signature"));
+        String encrypted = Files.readString(Path.of("message.encrypted"));
+        String signature = Files.readString(Path.of("message.signature"));
 
-        PrivateKey bankPrivateKey = security.loadPrivateKeyFromPEM("bank-root-private.pem");
+        String encryptedPrivateKeyPEM = Files.readString(Path.of("bank-root-private.pem"));
+        PrivateKey bankPrivateKey = security.loadPrivateKeyFromEncryptedPEM(encryptedPrivateKeyPEM, PASSWORD);
         X509Certificate bankCert = security.parseCertificateFromPEM(Files.readString(Path.of("bank-root-cert.pem")));
-        X509Certificate merchantCert = security.parseCertificateFromPEM(Files.readString(Path.of("signed-merchant1-cert.pem")));
+        X509Certificate merchantCert = security.parseCertificateFromPEM(Files.readString(Path.of("bank-signed-merchant1-cert.pem")));
 
-        byte[] decrypted = security.decrypt(encrypted, bankPrivateKey);
+        String decrypted = security.decrypt(encrypted, bankPrivateKey);
         boolean verified = security.verify(decrypted, signature, bankCert, merchantCert);
 
-        String message = new String(decrypted);
-        System.out.println("🧾 Message: " + message);
+        System.out.println("🧾 Message: " + decrypted);
         System.out.println("✅ Signature verified: " + verified);
     }
 }
